--- a/css/style.css
+++ b/css/style.css
@@ -119,19 +119,21 @@ h2{
 
 /* SOBRE */
 #sobre{
-    background-color: whitesmoke;
+    background-color: whitesmoke;    
+    padding: 100px;
 }
 
 
 /* PORTFÓLIO */ 
-.portfolio{
-    border: 3px solid #ffe400 ;
+#portfolio{
+    padding: 100px;
 }
 
 
 /* CONTATO */ 
 #contato{    
     background-color: whitesmoke;
+    padding: 100px;
 }
 .localizacao{
     color: #8a2be2;
@@ -179,8 +181,9 @@ h2{
 /* FOOTER */
 footer{
     background-color: #8a2be2;
-    border: 2px solid #ffe400 ;
+    border: 2px solid #ffe400 ;    
+    padding: 10px;
 }
 footer h4{
-    font-size: 17px;
+    font-size: 15px;
 }
