--- a/css/style.css
+++ b/css/style.css
@@ -129,7 +129,8 @@ h2{
 /* PORTFÓLIO */ 
 #portfolio{
     padding-top: 100px;
-    padding-bottom: 100px;
+    padding-bottom: 100px;  
+
 }
 
 
@@ -137,7 +138,8 @@ h2{
 /* CONTATO */ 
 #contato{    
     background-color: whitesmoke;
-    padding: 100px;
+    padding-top: 100px;
+    padding-bottom: 100px;  
 
 }
 .localizacao{
